<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTaskAddEdit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task_add_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/label_colour_overdue"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:text="@string/colour_overdue_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_overdue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_overdue"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_overdue"
            app:layout_constraintLeft_toRightOf="@id/label_colour_overdue"
            app:layout_constraintRight_toLeftOf="@id/button_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_overdue"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            app:layout_constraintLeft_toRightOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_overdue" />

        <TextView
            android:id="@+id/label_colour_today"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_today_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_overdue"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_today"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_today"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_today"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_today"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_today"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_tomorrow_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_today"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_tomorrow"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_tomorrow"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_tomorrow"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_tomorrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_tomorrow"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_three_days"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_three_days_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_tomorrow"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_three_days"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_three_days"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_three_days"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_three_days"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_three_days"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_week"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_week_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_three_days"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_week"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_week"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_week"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_week"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_week"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_week_plus"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_week_plus_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_week"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_week_plus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_week_plus"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_week_plus"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_week_plus"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_week_plus"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_conditional"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_conditional_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_week_plus"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_conditional"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_conditional"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_conditional"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_conditional"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_conditional"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_pending"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_pending_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_conditional"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_pending"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_pending"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_pending"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_pending"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_pending"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <TextView
            android:id="@+id/label_colour_complete"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/colour_complete_label"
            android:textSize="16sp"
            android:textColor="@color/sub_content"
            app:layout_constraintTop_toBottomOf="@id/label_colour_pending"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/edit_colour_complete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name of export file"
            android:inputType="text"
            android:textColor="@color/sub_content"
            android:labelFor="@id/label_colour_complete"
            app:layout_constraintBottom_toBottomOf="@id/label_colour_complete"
            app:layout_constraintLeft_toLeftOf="@id/edit_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/edit_colour_overdue"
            tools:ignore="LabelFor" />


        <android.widget.Button
            android:id="@+id/button_colour_complete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            style="@style/button_primary"
            app:layout_constraintBottom_toBottomOf="@id/edit_colour_complete"
            app:layout_constraintLeft_toLeftOf="@id/button_colour_overdue"
            app:layout_constraintRight_toRightOf="@id/button_colour_overdue"/>

        <android.widget.Button
            android:id="@+id/btn_cancel_colours"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            style="@style/button_primary"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/label_colour_complete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_save_colours"/>

        <android.widget.Button
            android:id="@+id/btn_save_colours"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="16sp"
            style="@style/button_primary"
            app:layout_constraintTop_toTopOf="@id/btn_cancel_colours"
            app:layout_constraintLeft_toRightOf="@id/btn_cancel_colours"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>